<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/purple_500"/>
    <TextView
        android:id="@+id/tvText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/text_1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
         />
    <TextView
        android:id="@+id/tvText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/text_2"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvText1"
         />
    <TextView
        android:id="@+id/tvText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/text_3"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvText2"
         />

    <TextView
        android:id="@+id/tvText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvText2"
        android:layout_toEndOf="@+id/tvText3"
        android:text="@string/text_4"
        android:textSize="20dp" />



</RelativeLayout>